2002-11-18  Paolo Carlini  <pcarlini@unitus.it>

	PR libstdc++/6745 (continued)
	* include/bits/streambuf.tcc (__copy_streambufs):
	Deal with interactive input by using isatty as in the
	fix for libstdc++/8399.

2002-11-17  Jakub Jelinek  <jakub@redhat.com>

	* config/linker-map.gnu: Export _S_construct even if size_t is
	unsigned long.  Collapse std::codecvt<char>::codecvt(size_t)
	and std::codecvt<wchar_t>::codecvt(size_t) into one export pattern.

2002-11-15  Benjamin Kosnik  <bkoz@redhat.com>
            Gabriel Dos Reis  <gdr@integrable-solutions.net>

	PR libstdc++/8230
	* include/bits/stl_alloc.h: Use builtin_expect for the most
	obvious limit checks.
	(__default_alloc_template::allocate): Check for null, throw
	bad_alloc.
	* include/bits/vector.tcc: Formatting tweaks.
	* include/bits/stl_vector.h: Same.	
	* testsuite/20_util/allocator_members.cc (test02): Add.
	* testsuite/23_containers/vector_capacity.cc (test03): Add.
	
2002-11-15  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	* src/ios.cc [_GLIBCPP_HAVE_UNISTD_H]: Include unistd.h.

2002-11-15  Paolo Carlini  <pcarlini@unitus.it>
            Loren J. Rittle  <ljrittle@acm.org>

	PR libstdc++/8399
	* acinclude.m4
	(GLIBCPP_CHECK_UNISTD_DECL_AND_LINKAGE_1): New macro to
	check for unistd.h functions.
	(GLIBCPP_CHECK_UNISTD_SUPPORT): New macro, check for isatty
	in unistd.h.
	* configure.in: Call here.
	* src/ios.cc (ios_base::Init::_S_ios_create(bool)):
	Use _GLIBCPP_HAVE_ISATTY: ifdef, in case of interactive
	input __in_size = 1 even when sync_with_stdio is false;
	otherwise fall back to __in_size = 1.
	* aclocal.m4: Regenerate.
	* config.h.in: Regenerate.
	* configure: Regenerate.

2002-11-13  Benjamin Kosnik  <bkoz@redhat.com>

	* acconfig.h (HAVE_DRAND48): Add.
	(HAVE_GETPAGESIZE): Add.
	(HAVE_SETENV): Add.	
	(HAVE_SIGSETJMP): Add.		
	* config.h.in: Regenerate.
	* configure: Regenerate.
	
2002-11-13  John David Anglin  <dave@hiauly1.hia.nrc.ca>
