@@ -1,3 +1,11 @@
+2002-11-18  Jonathan Lennox  <lennox@cs.columbia.edu>
+
+	* include/bits/streambuf.tcc (__copy_streambufs): verify
+	__sbin->gptr() + __bufsize < __sbin->egptr() before using.
+	* testsuite/27_io/ostream_inserter_other.cc (test_buffer_4): Add.
+	(test05): Use test_buffer_4.  Delete unused ostringstream
+	variables.
+
 2002-11-18  Paolo Carlini  <pcarlini@unitus.it>
 
 	PR libstdc++/6745 (continued)
